--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,10 +19,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: 22
-        cache: 'npm'
-    - run: npm install
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
     - run: npm test
