--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         node-version: lts/*
         cache: 'npm'
+        cache-dependency-path: 'backend/package-lock.json'
     - name: Install dependencies
       run: npm ci
     - run: npm test
