--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         node-version: lts/*
         cache: 'npm'
+        cache-dependency-path: 'frontend/package-lock.json'
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
