--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,13 @@
     "test": "vitest"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "supertest": "^7.0.0",
     "vitest": "^3.0.5"
   }
 }
