--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,8 @@ jobs:
         node-version: lts/*
         cache: 'npm'
         cache-dependency-path: 'frontend/package-lock.json'
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.12.0
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
