--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,9 @@ jobs:
       uses: supercharge/mongodb-github-action@1.12.0
     - name: Install dependencies
       run: npm install
+    - name: Install backend dependencies
+      run: npm install
+      working-directory: ../backend
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
