--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
     - name: Install backend dependencies
       run: npm install
-      working-directory: ../backend
+      working-directory: ./backend
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
